fixed spacing mid1 mid2

--- a/css/index.css
+++ b/css/index.css
@@ -168,7 +168,7 @@ h4{
 .mid2{
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;	
+	justify-content: space-around;	
 	margin-bottom: 40px;
 }
 
